--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,6 +58,7 @@ dependencies = [
     # Utilities
     "python-dotenv>=1.0.0",
     "python-multipart>=0.0.9",
+    "jinja2>=3.1.0",
 ]
 
 [project.optional-dependencies]
